--- a/SH3_Proto/Packages/manifest.json
+++ b/SH3_Proto/Packages/manifest.json
@@ -3,12 +3,13 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.2d.tilemap.extras": "https://github.com/Unity-Technologies/2d-extras.git#master",
-    "com.unity.collab-proxy": "1.2.16",
-    "com.unity.ide.rider": "1.1.4",
-    "com.unity.ide.vscode": "1.1.4",
-    "com.unity.render-pipelines.lightweight": "7.4.1",
-    "com.unity.test-framework": "1.1.11",
-    "com.unity.textmeshpro": "2.0.1",
+    "com.unity.collab-proxy": "1.3.8",
+    "com.unity.ide.rider": "1.2.1",
+    "com.unity.ide.visualstudio": "2.0.2",
+    "com.unity.ide.vscode": "1.2.1",
+    "com.unity.render-pipelines.lightweight": "8.2.0",
+    "com.unity.test-framework": "1.1.16",
+    "com.unity.textmeshpro": "3.0.1",
     "com.unity.timeline": "1.2.12",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
@@ -42,11 +43,5 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  },
-  "lock": {
-    "com.unity.2d.tilemap.extras": {
-      "revision": "master",
-      "hash": "c051b95afaf1a099a0369b70fdea19bde5d8d100"
-    }
   }
 }
